--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <h1>Hello, {{ name }}!</h1>
