--- a/app/templates/update_activity.html
+++ b/app/templates/update_activity.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Activity</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Update Strava Activity</h1>
